[project]
name = "l2g-widget-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyspark>=3.5.4",
    "rpy2>=3.5.17",
    "ruff>=0.9.2",
    "shap>=0.46.0",
    "skops>=0.11.0",
]
